# cloud-waste-hunter

./: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_SUMMARY.md  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pyrightconfig.json  test_batch_api.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  actions.py  audit.py  detections.py  nat_gateways.py
backend/app/aws/: __init__.py  client.py  nat_gateway.py  resources.py  snapshot_client.py
backend/app/core/: config.py
backend/app/database/: __init__.py
backend/app/database/postgres/: __init__.py  engine.py
backend/app/database/postgres/scripts/: __init__.py  init_db.py
backend/app/detection/: ebs_detector.py  ec2_detector.py  nat_gateway_detector.py  snapshot_detector.py
backend/app/models/: __init__.py  action_models.py  audit.py  audit_models.py  base.py  detection.py  detection_models.py  nat_gateway.py
backend/app/repositories/: __init__.py  audit_repository.py  detection_repository.py  nat_gateway_repository.py
backend/app/safety/: __init__.py  dry_run.py  executor.py  rollback.py
backend/app/schemas/: __init__.py  audit.py  base.py  detection.py  nat_gateway.py
backend/app/services/: __init__.py  action_service.py  audit_service.py  detection_service.py  nat_gateway_service.py
backend/scripts/: README.md  init_db.py
backend/tests/: conftest.py  test_action_service_safety_check.py  test_action_service_snapshot.py  test_dry_run.py  test_nat_gateway.py  test_nat_gateway_collector.py  test_nat_gateway_detector.py  test_snapshot_client.py
backend/tests/detection/: test_ebs_detector.py  test_nat_gateway_detector.py
frontend/: .dockerignore  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: page.tsx
frontend/app/actions/[id]/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/detections/: page.tsx
frontend/app/detections/nat-gateways/: page.tsx
infra/: .terraform.lock.hcl  main.tf  variables.tf
infra/environments/: dev.tfvars
infra/modules/aws/compute/: main.tf  variables.tf
infra/modules/aws/database/: main.tf  variables.tf
infra/modules/aws/functions/: main.tf  variables.tf
infra/modules/aws/networking/: main.tf  variables.tf
infra/modules/aws/security/: main.tf  variables.tf
infra/modules/aws/storage/s3/: main.tf
