[project]
name = "cloud-waste-hunter"
version = "1.0.0"
description = "Automated AWS Cost Optimization with ML-Powered Waste Detection"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & Web Framework
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # AWS SDK
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "greenlet>=3.0.0",  # Required for async SQLAlchemy

    # ML & Data Processing
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",

    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP Client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Logging & Monitoring
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    # Linting & Formatting
    "black>=24.8.0",
    "mypy>=1.11.0",
    "ruff>=0.8.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "ruff>=0.8.0",
    "pre-commit>=3.8.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | dist
  | build
)/
'''

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.*"]
disallow_untyped_defs = true
warn_return_any = false

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    "dist",
    "build",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "TRY003", # avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004", "S101"]  # allow test-specific patterns
"**/scripts/init_db.py" = ["T201"]  # print statements are fine for CLI scripts

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
